--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
   line-height: 1.7;
   color: #4d4d4d;
   background: #fff;
+  scroll-behavior: smooth;
 }
 
 #page {
@@ -359,13 +360,13 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
 }
 .fh5co-social-icons li a {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   color: #FF9000;
   padding-left: 10px;
   padding-right: 10px;
@@ -384,13 +385,13 @@ h1, h2, h3, h4, h5, h6, figure {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
 }
 #fh5co-about .fh5co-social-icons li a {
   display: -moz-inline-stack;
   display: inline-block;
   zoom: 1;
-  *display: inline;
+  display: inline;
   color: #fff;
   background: #2F3C4F;
   padding: 10px 10px 2px 10px;
@@ -713,7 +714,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
-  height: 270px;
+  height: auto;
   width: 100%;
   display: table;
   overflow: hidden;
